--- a/Cmaner/Cmaner.csproj
+++ b/Cmaner/Cmaner.csproj
@@ -4,7 +4,10 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <PublishAot1>true</PublishAot1>
+        <EnableAggressiveTrimming>true</EnableAggressiveTrimming>
+        <PublishAot>true</PublishAot>
+        <AssemblyName>cm</AssemblyName>
+        
     </PropertyGroup>
     <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('Windows'))">
         <DefineConstants>OS_WINDOWS</DefineConstants>
